# Flam-Assignments-Android-developer-role

./: README.md
flam assignment Q1/: LRUCacheConsole.java  README.md
flam assignment Q2/: Main.java  MyHashMap.java  README.md
flam assignment Q3/: README.md  local.properties
flam assignment Q3/app/: build.gradle
flam assignment Q3/app/src/main/: AndroidManifest.xml
flam assignment Q3/app/src/main/assets/: mock_books.json
flam assignment Q3/app/src/main/java/com/example/bookreviewapp/data/local/: BookDao.java  BookDatabase.java  BookEntity.java
flam assignment Q3/app/src/main/java/com/example/bookreviewapp/data/remote/: BookApiService.java
flam assignment Q3/app/src/main/java/com/example/bookreviewapp/data/repository/: BookRepositoryImpl.java
flam assignment Q3/app/src/main/java/com/example/bookreviewapp/domain/model/: Book.java
flam assignment Q3/app/src/main/java/com/example/bookreviewapp/domain/repository/: BookRepository.java
flam assignment Q3/app/src/main/java/com/example/bookreviewapp/presentation/: BookDetailActivity.java  MainActivity.java
flam assignment Q3/app/src/main/res/layout/: activity_book_detail.xml  activity_main.xml  item_book.xml
flam assignment Q3/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
flam assignment Q4/: CMakeLists.txt  README.md
flam assignment Q4/include/: camera.h  shader.h  solar_system.h
flam assignment Q4/shaders/: planet_fragment.glsl  sun_fragment.glsl  vertex.glsl
flam assignment Q4/src/: camera.cpp  main.cpp  shader.cpp  solar_system.cpp
(+3 files in other folders)
